test/fail_compilation/fail3150.d

void main() {
    ulong u = cast(ulong)[1,2];
}
